
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Jan Laermann", email = "laermannjan@gmail.com"},
]
dependencies = []
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.3.1",
    "black>=23.3.0",
    "ruff>=0.0.269",
    "mypy>=1.3.0",
]
