[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "monkey"
version = "0.1.0"
description = "Interpreter of the Monkey language"
authors = [{ name = "Jan Laermann", email = "laermannjan@gmail.com" }]
dependencies = []
requires-python = ">=3.11"
license = { text = "MIT" }


[tool.pdm.dev-dependencies]
dev = ["pytest>=7.3.1", "black>=23.3.0", "ruff>=0.0.269", "mypy>=1.3.0"]

[tool.black]
line-length = 120

[tool.ruff]
select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "E",   # pycodestyle
    "F",   # pyflakes
    "PGH", # pygrep-hooks
    "RUF", # ruff
    "W",   # pycodestyle
    "YTT", # flake8-2020
    "UP",
]
extend-ignore = [
    "E501", # line-length
]
src = ["src"]
