
[project]
name = "monkey"
version = "0.1.0"
description = ""
authors = [
    {name = "Jan Laermann", email = "laermannjan@gmail.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "None"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.3.1",
    "black>=23.3.0",
    "ruff>=0.0.270",
    "mypy>=1.3.0",
]
